CHT-107: Create PrincipalVariationReport